feat: add multi-project dynamic scope API
